# portfolio

./: .gitignore  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/app/: __init__.py
src/app/routes/: roures.py
src/app/static/css/: base.css  index.css
src/app/templates/: about.html  base.html  contact.html  index.html  project.html
src/app/views/: roures.py
