[project]
name = "my-portfolio"
version = "0.1.0"
description = "A simple site to talk about me and my experiences. Developed using Python Flask and Jinja templates."
authors = [
    { name = "Kascabrel", email = "+Kascabr107616396el@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4,<3.0.0",
    "flask>=2.3.3,<3.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[build-system]
requires = ["setuptools>=65.0.0","wheel"]
build-backend = "setuptools.build_meta"
